[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/game_logic/settings.gd" type="Script" id=1]
[ext_resource path="res://scenes/game_logic/main_loop.gd" type="Script" id=2]
[ext_resource path="res://scenes/user_interface/input_handler.gd" type="Script" id=3]
[ext_resource path="res://scenes/user_interface/HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://scenes/user_interface/HUD/build_menu/construction_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/user_interface/camera/camera_anchor.gd" type="Script" id=6]
[ext_resource path="res://scenes/actors/constructions/cone_of_construction/cone_of_construction.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/actors/units/basic_tank/basic_tank.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/actors/units/serious_tank/serious_tank.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/environments/maps/map.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 484.79, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 486, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 275 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 276 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CubeMesh" id=9]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
size = Vector3( 0.2, 0.2, 0.2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=10]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
flags_do_not_receive_shadows = false
flags_disable_ambient_light = false
flags_ensure_correct_normals = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_billboard_keep_scale = false
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0, 0, 0, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 1.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_mode = 0
_sections_unfolded = [ "Albedo" ]

[node name="game" type="Node"]

[node name="game_logic" type="Node" parent="."]

[node name="settings" type="Node" parent="."]
script = ExtResource( 1 )
debug = false
debug_level = 0

[node name="main_loop" type="Node" parent="."]
script = ExtResource( 2 )
destination_lines_enabled = 1
debug = false

[node name="input_handler" type="Node" parent="."]
script = ExtResource( 3 )
fast_move = 0
rotating_camera = 0

[node name="UI" type="Node2D" parent="."]

[node name="HUD" type="Node2D" parent="UI"]
script = ExtResource( 4 )
draw = 0

[node name="construction_menu" parent="UI/HUD" instance=ExtResource( 5 )]
margin_left = 598.0
margin_top = 197.0
margin_right = 598.0
margin_bottom = 197.0

[node name="unit_info" type="Node2D" parent="UI/HUD"]

[node name="game_world" type="Spatial" parent="."]

[node name="camera_anchor" type="Position3D" parent="game_world"]
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]
camera_speed = 0.003
camera_rotation = 0.0
direction = Vector3( 0, 0, 0 )
fast_move = false
rotating_camera = false

[node name="camera" type="Camera" parent="game_world/camera_anchor"]
transform = Transform( 1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 14.7044, 7.34749 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="camera_navigation_zones" type="Node2D" parent="game_world/camera_anchor"]
editor/display_folded = true

[node name="top" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 511.842, 14.0526 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/top"]
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="bottom" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 512, 589 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/bottom"]
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="left" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 13.9999, 302.053 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/left"]
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="right" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 1013, 300.947 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/right"]
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="top_left_corner" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 14.7368, 14.8947 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/top_left_corner"]
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="top_right_corner" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 1013, 13 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/top_right_corner"]
shape = SubResource( 6 )

[node name="bottom_left_corner" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 14, 589 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/bottom_left_corner"]
shape = SubResource( 7 )

[node name="bottom_right_corner" type="Area2D" parent="game_world/camera_anchor/camera_navigation_zones"]
editor/display_folded = true
position = Vector2( 1011.89, 589.895 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionShape2D" parent="game_world/camera_anchor/camera_navigation_zones/bottom_right_corner"]
shape = SubResource( 8 )

[node name="anchor_test_cube" type="MeshInstance" parent="game_world/camera_anchor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 9 )
skeleton = NodePath("..")
material/0 = SubResource( 10 )
_sections_unfolded = [ "Transform", "material" ]

[node name="actors" type="Spatial" parent="game_world"]

[node name="constructions" type="Spatial" parent="game_world/actors"]

[node name="cone_of_construction" parent="game_world/actors/constructions" groups=[
"buildings",
"available_build_area",
] instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.2089 )
build_radius = 0

[node name="resources" type="Spatial" parent="game_world/actors"]

[node name="units" type="Spatial" parent="game_world/actors"]

[node name="basic_tank" parent="game_world/actors/units" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.61078, 0, 9.03893 )
_sections_unfolded = [ "Transform" ]

[node name="serious_tank" parent="game_world/actors/units" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.05649 )

[node name="environment" type="Spatial" parent="game_world"]

[node name="map" parent="game_world/environment" instance=ExtResource( 10 )]

